<resources>
    <string name="app_name">Box Volume &amp; Density V1</string>
    <string name="table_title">Box Volume &amp; Density</string>
    <string name="label_height">Height</string>
    <string name="label_length">Length</string>
    <string name="label_width">Width</string>
    <string name="label_weight">Weight</string>

    <string name="label_volume">Volume</string>
    <string name="label_density">Density</string>

    <string name="change_data">Change Box Data</string>

    <string name="default_value_input">10</string>
    <string name="volume_value">1000</string>
    <string name="density_value">100</string>
    <string name="update">Update</string>
</resources>